[package]
name = "pg_chainutils"
version = "0.0.13"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg16"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg_test = []

[dependencies]
pgrx = "=0.11.3"
ethers = "2.0"
anyhow = "1.0.71"
serde = "1.0.163"
num = "0.4.0"
bigdecimal = "0.3.1"

[dev-dependencies]
pgrx-tests = "=0.11.3"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
