[package]
name = "pg_chainutils"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_pg_chainutils"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg17"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg_test = []

[dependencies]
pgrx = "0.14.1"
alloy = { version = "0.8", features = ["full"] }
anyhow = "1.0.71"
serde = { version = "1" }
num = "0.4.0"
bigdecimal = "0.3.1"

[dev-dependencies]
pgrx-tests = "0.14.1"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
